[project]
name = "perplexity-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "perplexity-api",
    "pydantic>=2.13.4",
    "uvicorn>=0.50.0",
]

[tool.uv.sources]
perplexity-api = { git = "https://github.com/helallao/perplexity-ai.git" }
